force-app/main/default/objects/Orden_de_Compra__c/Orden_de_Compra__c.object-meta.xml
<CustomObject>
    <label>Orden de Compra</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Nombre de Orden de Compra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes de Compras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>