force-app/main/default/objects/Orden_de_Compra__c/fields/Asociado__c.field-meta.xml
<CustomField>
    <fullName>Asociado__c</fullName>
    <label>Asociado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>