force-app/main/default/objects/Orden_de_Compra__c/fields/Cant_Cuotas__c.field-meta.xml
<CustomField>
    <fullName>Cant_Cuotas__c</fullName>
    <label>Cant Cuotas</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>