force-app/main/default/objects/Orden_de_Compra__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ordenes de Compras</relationshipLabel>
    <relationshipName>Ordenes_de_Compras</relationshipName>
    <type>Lookup</type>
</CustomField>