force-app/main/default/objects/Orden_de_Compra__c/fields/Estado_OC__c.field-meta.xml
<CustomField>
    <fullName>Estado_OC__c</fullName>
    <label>Estado OC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generada</fullName>
                <default>true</default>
                <label>Generada</label>
            </value>
            <value>
                <fullName>Pedido Cotizacion</fullName>
            </value>
            <value>
                <fullName>Cotizada</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
            </value>
            <value>
                <fullName>Diferencia Socio</fullName>
            </value>
            <value>
                <fullName>Desestimada</fullName>
            </value>
            <value>
                <fullName>Ctro Aut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>