force-app/main/default/objects/Orden_de_Compra__c/fields/Fecha_de_realizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_realizacion__c</fullName>
    <formula>Caso__r.Evento_Medico__r.Fecha_y_Hora_inicio_EMS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de realizacion</label>
    <type>DateTime</type>
</CustomField>