force-app/main/default/objects/Orden_de_Compra__c/fields/forma_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>forma_de_Pago__c</fullName>
    <label>Forma de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aca Salud</fullName>
                <label>Avalian</label>
            </value>
            <value>
                <fullName>Prestador</fullName>
            </value>
            <value>
                <fullName>Sin cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>