force-app/main/default/objects/Orden_de_Compra__c/fields/Urgencia__c.field-meta.xml
<CustomField>
    <fullName>Urgencia__c</fullName>
    <label>Urgencia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>