force-app/main/default/objects/Orden_de_Compra__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Caso__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Asociado__c</columns>
    <columns>Estado_OC__c</columns>
    <columns>Urgencia__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Fecha_de_realizacion__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado_OC__c</field>
        <operation>notEqual</operation>
        <value>Finalizada,Rechazada,Anulada,Desestimada</value>
    </filters>
    <label>Todos</label>
</ListView>